--- a/views/index.haml
+++ b/views/index.haml
@@ -1,8 +1,5 @@
-/ 
-/ %ul
-/   - @photos.each do |photo|
-/     %li
-/       %img{ :src => make_flickr_url(photo)}
-      
-= flickr_search("obama")
-      
+
+%ul
+  - @photos.each do |photo|
+    %li
+      %img{ :src => make_flickr_url(photo)}
