correcting CSS metadata

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,7 +1,7 @@
 /****
-I Used To Work In A Newspaper
-http://iusedtoworkinanewspaper.com
-20090111
+Streamslide
+http://streamslide.com
+20090206
 
 TOC
 - =Generic Rules
