adding reinvigorate but not google. no more google

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -31,3 +31,8 @@
   
   // Run scripts
   %script{:src => versioned_javascript("go"), :type => "text/javascript"}
+  
+  / reinvigorate tracking code
+  %script{ :type => "text/javascript",  :src => "http://include.reinvigorate.net/re_.js"}
+  %script{ :type => "text/javascript"} re_("c9e9a-mx3780v689");
+
