--- a/views/index.haml
+++ b/views/index.haml
@@ -1,5 +1,5 @@
 %ul
   - @photos.each do |photo|
     %li
-      %a.img{:href => photo['url']}
+      %a{:href => photo['url']}
         %img{:height => photo['height'], :src => photo['source'], :width => photo['width']}
