--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -41,8 +41,8 @@ body {background: #000; color: #fefefe; font: 62.5%/1.4 'Helvetica Neue', Helvet
     #header {margin: 0 0 1em 0; overflow: auto;}
         #header h1 {float: left; margin: 0.13em 0.4em 0 0.4em; width: auto;}
             #header h1 a {display: block;}
-        #header form {float: left; line-height: 2.3em; margin: 0.85em 1em 0 0; width: auto;}
-            #header form input {width: 50em;}
+        #header form {float: left; line-height: 2.3em; margin: 0.85em 1em 0 0; width: 60%;}
+            #header form input {width: 50%;}
             #header form input.submit {width: auto;}
         #permalink {display: block; font-size: 0.8em; margin: 1.9em 0 0 0;}
         
