validating that code

--- a/views/index.haml
+++ b/views/index.haml
@@ -2,4 +2,4 @@
   - @photos.each do |photo|
     %li
       %a{:href => photo['url'].gsub(/(.+)sizes\/l\/$/, '\1')}
-        %img{:height => photo['height'], :src => photo['source'], :width => photo['width']}
+        %img{:alt => "", :height => photo['height'], :src => photo['source'], :width => photo['width']}
